Refactor requirements.txt with specific versions
Updated package versions and added new dependencies.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
-streamlit>=1.39.0
-pandas>=2.2.0
-openai>=1.52.0
-python-dotenv>=1.0.0
-passlib[bcrypt]>=1.7.4
-streamlit-cookies-manager>=0.2.0
+streamlit==1.39.0
+pandas==2.2.3
+python-dotenv==1.0.1
+requests==2.32.3
+
+# AI SDK
+openai==1.57.0
+
+# Database
+sqlalchemy==2.0.36
+
+# Authentication & hashing
 passlib==1.7.4
-bcrypt==4.0.1
+bcrypt==4.1.2
+
+# Email / notifications (لاحقاً)
+sendgrid==6.11.0
+
+# Utils
+pillow==10.4.0
