--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,1 @@
-streamlit==1.39.0
-pandas==2.2.3
-python-dotenv==1.0.1
-requests==2.32.3
-
-# AI SDK
-openai==1.57.0
-
-# Database
-sqlalchemy==2.0.36
-
-# Authentication & hashing
-passlib==1.7.4
-bcrypt==4.1.2
-
-# Email / notifications (لاحقاً)
-sendgrid==6.11.0
-
-# Utils
-pillow==10.4.0
+openai>=1.13.0
